# mall

./: .gitignore  Cargo.toml  README.md
proto/: address_message.proto  aff_message.proto  banner_message.proto  banner_service.proto  brand_message.proto  cart_message.proto  cart_service.proto  category_brand_message.proto  category_message.proto  daterange_message.proto  del_or_restore_message.proto  goods_attr_message.proto  goods_message.proto  goods_service.proto  id_message.proto  is_exists_message.proto  order_goods_message.proto  order_message.proto  order_service.proto  paginate_message.proto  pay_message.proto  uintrange_message.proto  user_message.proto  user_service.proto
scripts/sql/: mall.sql  mall_domains.sql  mall_idx.sql  mall_views.sql
src/: config.rs  errs.rs  etcd.rs  lib.rs  pb.rs
src/db/: address.rs  banner.rs  brand.rs  cart.rs  category.rs  category_brand.rs  goods.rs  goods_attr.rs  mod.rs  order.rs  order_goods.rs  paginate.rs  pay.rs  user.rs
src/model/: address.rs  banner.rs  brand.rs  cart.rs  category.rs  category_brand.rs  datetime_range.rs  goods.rs  goods_attr.rs  mod.rs  order.rs  order_goods.rs  pay.rs  unsigned.rs  unsigned_range.rs  user.rs
src/srv/: banner_srv.rs  cart_srv.rs  goods_srv.rs  mod.rs  order_srv.rs  user_srv.rs
src/types/state/: user.rs
src/utils/: cartesian.rs  dt.rs  hash.rs  id.rs  mod.rs  password.rs
src/web_api/: user_api.rs
tests/: goods-srv.rs  user-srv.rs
