[package]
name = "mall"
version = "0.1.0"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
repository = "https://github.com/axumrs/mall"
homepage = "https://axum.rs"
description = "axum.rs专题：构建分布式商城"

[dependencies]
tokio = {version = "1", features = ["full"]}
serde = { version="1", features = ["derive"] }
chrono = { version="0.4", features=["serde"]}
prost = "0.11"
prost-types = "0.11"
tonic = "0.9"
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls" , "mysql" ,"chrono"] }
rs-snowflake="0.6"
bcrypt = "0.14"
#config = "0.13"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = {version="0.6",features = ["headers"]}
headers="0.3"
tower-http = { version = "0.4", features = ["cors"] }
etcd-rs = "1.0"
serde_json = "1"

[build-dependencies]
tonic-build = "0.9"

